Removed slesh in src image

--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
   <div class="row g-4">
     <div class="col-md-4">
       <div class="card h-100">
-        <img src="/cow-goat-sheep.jpeg" class="card-img-top" alt="Livestock">
+        <img src="cow-goat-sheep.jpeg" class="card-img-top" alt="Livestock">
         <div class="card-body">
           <h3 class="card-title">Livestock</h3>
           <p class="card-text">Healthy cattle, goats and sheep ready for sale.</p>
