--- a/product.html
+++ b/product.html
@@ -35,7 +35,7 @@
   <div class="row g-4">
     <div class="col-md-4">
       <div class="card h-100">
-        <img src="cow-goat-sheep.jpeg" class="card-img-top" alt="Livestock">
+        <img src="img/cow-goat-sheep.jpeg" class="card-img-top" alt="Livestock">
         <div class="card-body">
           <h3 class="card-title">Livestock</h3>
           <p class="card-text">Healthy cattle, goats and sheep ready for sale.</p>
@@ -63,6 +63,8 @@
           <a href="order.html" class="btn btn-primary">Order Now</a>
         </div>
       </div>
+    </div>
+    <div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
