--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="col-md-6">
-      <img src="/img/james-brey.jpeg" class="img-fluid rounded" alt="Our farm field">
+      <img src="img/james-brey.jpeg" class="img-fluid rounded" alt="Our farm field">
     </div>
     <div class="col-md-6">
       <h2>Grazing land farm</h2>
